I add Contact page and Checkout page and handle header to contain new pages solve the problem of stretching the page on mobile on click navigation and update the expire date on home page to be ended at 24/5/2024 this the last things for that project. So any thing will happen is just an update for that project. I get the design of that project from figma here is the url: https://www.figma.com/file/7dHqsfAzMxBkhnaxtzVrwj/Full-E-Commerce-Website-UI-UX-Design-(Community)?type=design&node-id=1-3&mode=design&t=X1dEVXL8Lv47AjpL-0

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,7 +2,7 @@
     font-size: 25px;
     font-weight: bolder;
     margin-bottom: 5px;
-    background: linear-gradient(to left, #000000, #707070);
+    background: linear-gradient(to left, #000000, #222121);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
